# cc-loop-boilerplate

./: .gitignore  .loop.yml  AGENTS.md  CLAUDE.md  Makefile  ONBOARDING.md  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: architect.md  explorer.md  implementer.md  reviewer.md  security-auditor.md  spec-reviewer.md  verifier.md
.claude/hooks/: hooks.json  posttool-format.sh  pretool-guard.sh  stop-gate.sh
.claude/skills/explore/: SKILL.md
.claude/skills/fix/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/spec-init/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: loop-gates.yml
adapters/: detect.sh  lib.sh
adapters/stacks/: _template.sh  dotnet.sh  go.sh  java.sh  node.sh  python.sh  ruby.sh  rust.sh
evals/: README.md  run.sh
examples/duration-py/: README.md  duration.py  pyproject.toml  test_duration.py
loop/: run.sh  state.schema.json
loop/lib/: claude.sh  common.sh  config.sh  events.sh  gates.sh  git.sh  memory.sh  report.sh  state.sh
plugin/: README.md
scripts/: doctor.sh  install.sh  setup.sh  spec-lint.sh  uninstall.sh
specs/: constitution.md
specs/000-example/: adr-001.md  prd.md  spec.md
specs/001-spec-readiness-review/: adr-001.md  prd.md  spec.md
specs/002-explorer-and-memory/: adr-001.md  prd.md  spec.md
specs/003-evals-and-spec-lint/: adr-001.md  prd.md  spec.md
specs/004-interactive-setup/: adr-001.md  prd.md  spec.md
specs/templates/: adr.md  prd.md  spec.md
(+5 files in other folders)
